--- a/clases/semana-7.Rmd
+++ b/clases/semana-7.Rmd
@@ -458,17 +458,18 @@ using namespace std;
 
 int main() {
   int n, m;
-  char mat[n][m];
+  cin >> n >> m;
+  char arr[n][m];
   for (int i = 0; i < n; ++i) {
     for (int j = 0; j < m; ++j) {
-      cin >> mat[i][j];
+      cin >> arr[i][j];
     }
   }
   for (int i = 0; i < n; ++i) {
     for (int j = 0; j < m - j - 1; ++j) {
-      int temp = arr[i][j];
+      char temp = arr[i][j];
       arr[i][j] = arr[i][m-j-1];
-      arr[i][j] = temp;
+      arr[i][m-j-1] = temp;
     }
   }
   for (int i = 0; i < n; ++i) {
